--- a/Chemistry in Russian/оксид.md
+++ b/Chemistry in Russian/оксид.md
@@ -2,19 +2,22 @@
 - [Knowledge](#knowledge)
 - [New words](#new-words)
 
-### Knowledge
+### Knowledge/Знание
 
 - 两性氧化物
     - ZnO, PbO, SnO и BeO.
 - 不成盐氧化物
-    - CO, NO, N2O и SiO
-- 氢氧化 кто : гидроксид кого (价态)
-- 氧化 кто : оксид кого (价态)
-- ОН оаш
+    - CO, NO, N2O и SiO2
+- 氢氧化 чего : гидроксид чего (родительный падеж)
+    - (например: sodium hydroxide=гидроксид натрия)
+- 一氧化 чего : монооксид/окись чего (родительный падеж) 
+    - (например: carbon monoxide=монооксид/окись углерода) 
+- 二氧化 чего : диоксид/двуокись чего (родительный падеж)
+    - (например: nitrogen dioxide=диоксид/двуокись азота)
 
-### New words
+### New words/Новые слова
 
-| Russian                 | 中文         |
+| русский                 | китайские переводы         |
 |-------------------------|------------|
 | классификация           | 分类         |
 | получение               | 获取         |
@@ -36,7 +39,7 @@
 | относить                | 列入，归入      |
 | своеобразный            | 特殊的        |
 | двойной                 | 两种的        |
-| Двойные оксиды          | 双氧化物       |
+| двойные оксиды          | 双氧化物       |
 | образованный            | 被形成的       |
 | Солеобразующие оксиды   | 成盐氧化物      |
 | основный                | 碱性的        |
@@ -44,13 +47,13 @@
 | кислотный               | 酸性的        |
 | Основные оксиды         | 碱性氧化物      |
 | металл                  | 金属         |
-| Кислотные оксиды        | 酸性氧化物      |
-| Амфотерные оксиды       | 两性氧化物      |
-| Несолеобразующие оксиды | 不成盐氧化物     |
+| кислотные оксиды        | 酸性氧化物      |
+| амфотерные оксиды       | 两性氧化物      |
+| несолеобразующие оксиды | 不成盐氧化物     |
 | проявлять               | 表现出        |
 | гидроксид               | 氢氧化物       |
 | соответствовать         | 符合，相符      |
-| Взаимодействие          | 相互作用       |
+| взаимодействие          | 相互作用       |
 | большинство             | 大部分，大多数    |
 | устойчивый              | 稳定的        |
 | взаимодействовать       | 相互作用       |
@@ -58,7 +61,7 @@
 | пероксид                | 过氧化物       |
 | преимущественно         | 主要是        |
 | состав                  | 组成         |
-| Примечания              | 备注，注解      |
+| примечания              | 备注，注解      |
 | переменный              | 可变的        |
 | промежуточный           | 中间的        |
 | окалина                 | 氧化皮（铁的生锈）  |
@@ -89,7 +92,7 @@
 | гореть                  | 点燃         |
 | аммиак                  | 氨气，氮化氢     |
 | реагировать             | 反应         |
-| Разложение              | 分解         |
+| разложение              | 分解         |
 | кислота                 | 酸          |
 | оснований               | 碱          |
 | самопроизвольный        | 自发的        |
@@ -121,7 +124,7 @@
 | восстановительный       | 还原的        |
 | электрон                | 电子         |
 | окислить                | 酸化，使氧化     |
-| Углерод                 | 碳化物        |
+| углерод                 | 碳化物        |
 | уголь                   | 碳          |
 | активный                | 活泼的        |
 | угарный                 | 煤气的，一氧化碳气的 |
@@ -148,6 +151,6 @@
 | ион                     | 离子         |
 | внешне                  | 表面上        |
 | количество              | 数量         |
-| твердый                 | 固态的        |
+| твёрдый                 | 固态的        |
 |элекмент                 | 元素        |
  
